# vlc-vr

./: CMakeLists.txt  libopenhmd.so.0
cmake/: FindLIBVLC.cmake  FindOpenHMD.cmake
include/: button.h  gl.h  label.h  player.h  playercontroller.h  quaternion.h  screen.h  slider.h  usercontrol.h  userinterface.h
shaders/: test1.frag.glsl  test1.frag2.glsl  test1.vert.glsl  test1.vert2.glsl
src/: button.cpp  gl.cpp  label.cpp  main.cpp  player.cpp  playercontroller.cpp  quaternion.cpp  slider.cpp  usercontrol.cpp  userinterface.cpp
